--- a/package.json
+++ b/package.json
@@ -1,11 +1,58 @@
 {
   "name": "nn",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server/index.js",
+    "build": "next build",
+    "start": "node server/index.js",
+    "test": "jest",
+    "lint": "npx eslint --ext .jsx,.js ./src ./pages ./redux",
+    "docs": "npx styleguidist server"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "@zeit/next-css": "^1.0.0",
+    "@zeit/next-sass": "^1.0.0",
+    "babel-loader": "^7.1.5",
+    "babel-polyfill": "^6.26.0",
+    "fetch-mock": "^6.5.2",
+    "isomorphic-fetch": "^2.2.1",
+    "next": "^7.0.0",
+    "next-images": "^1.0.1",
+    "node-sass": "^4.9.2",
+    "normalize.css": "^8.0.0",
+    "postcss-loader": "^3.0.0",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
+    "react-dom": "^16.4.2",
+    "react-redux": "^5.0.1",
+    "redux": "^3.6.0",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.1.0",
+    "restify": "^7.2.1",
+    "restify-router": "^0.5.0"
+  },
+  "license": "ISC",
+  "devDependencies": {
+    "babel-core": "7.0.0-bridge.0",
+    "babel-eslint": "^8.2.6",
+    "babel-jest": "22.4.3",
+    "babel-plugin-inline-react-svg": "^0.5.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "css-loader": "^1.0.0",
+    "enzyme": "3.2.0",
+    "enzyme-adapter-react-16": "1.1.1",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.13.0",
+    "eslint-plugin-jest": "^21.18.0",
+    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-react": "^7.10.0",
+    "jest": "22.0.1",
+    "react-addons-test-utils": "15.6.2",
+    "react-styleguidist": "^7.3.4",
+    "react-test-renderer": "16.2.0",
+    "redux-mock-store": "^1.5.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.1"
+  }
 }
