--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "docs": "npx styleguidist server"
   },
   "dependencies": {
-    "@zeit/next-css": "^1.0.0",
-    "@zeit/next-sass": "^1.0.0",
+    "@zeit/next-css": "^0.2.0",
+    "@zeit/next-sass": "^0.2.0",
     "babel-loader": "^7.1.5",
     "babel-polyfill": "^6.26.0",
     "fetch-mock": "^6.5.2",
     "isomorphic-fetch": "^2.2.1",
-    "next": "^7.0.0",
+    "next": "^6.1.1",
     "next-images": "^1.0.1",
     "node-sass": "^4.9.2",
     "normalize.css": "^8.0.0",
@@ -37,6 +37,7 @@
     "babel-eslint": "^8.2.6",
     "babel-jest": "22.4.3",
     "babel-plugin-inline-react-svg": "^0.5.4",
+    "babel-plugin-module-resolver": "^3.1.1",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "css-loader": "^1.0.0",
     "enzyme": "3.2.0",
