--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "build": "next build",
     "start": "node server/index.js",
     "test": "jest",
-    "lint": "npx eslint --ext .jsx,.js ./src ./pages ./redux",
-    "docs": "npx styleguidist server"
+    "lint": "npx eslint --ext .jsx,.js ./src ./pages ./redux"
   },
   "dependencies": {
     "@zeit/next-css": "^0.2.0",
@@ -50,7 +49,6 @@
     "eslint-plugin-react": "^7.10.0",
     "jest": "22.0.1",
     "react-addons-test-utils": "15.6.2",
-    "react-styleguidist": "^7.3.4",
     "react-test-renderer": "16.2.0",
     "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
